srcs/tester/base/vector/at/log.txt
./base/vector/at/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector (10); // 10 zero-initialized ints
 ^
./base/vector/at/patched.cpp:10:23: error: use of undeclared identifier 'myvector'
 for (unsigned i=0; i<myvector.size(); i++)
                      ^
./base/vector/at/patched.cpp:11:2: error: use of undeclared identifier 'myvector'
 myvector.at(i)=i;
 ^
./base/vector/at/patched.cpp:14:23: error: use of undeclared identifier 'myvector'
 for (unsigned i=0; i<myvector.size(); i++)
                      ^
./base/vector/at/patched.cpp:15:22: error: use of undeclared identifier 'myvector'
 std::cout << ' ' << myvector.at(i);
                     ^
5 errors generated.
